--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "i18n": "^0.15.1",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
-    "prisma": "^4.6.1"
+    "nodemailer": "^6.8.0",
+    "nodemailer-express-handlebars": "^5.0.0",
+    "prisma": "^4.6.1",
+    "uuid": "^9.0.0"
   }
 }
