--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "~4.16.1",
     "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
-    "i18n": "^0.15.1",
+    "i18next": "^22.0.6",
+    "i18next-fs-backend": "^2.0.1",
+    "i18next-http-middleware": "^3.2.1",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
